Fix text alignment (#168)

--- a/src/Launcher.css
+++ b/src/Launcher.css
@@ -31,3 +31,7 @@ body.blur-disable #launcher {
     backdrop-filter: none;
     -webkit-backdrop-filter: none;
 }
+
+.app-shortcut-name {
+    text-align: center;
+}
